Update bootloader makefile and conf

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -7,15 +7,21 @@
 
 .patch_applied:
 	@echo Applying patches ...
-	@cp patches/tinyaprs.conf.mk .xboot/conf
+	@cd .xboot; cat ../patches/*.patch | patch -p2
 	@touch .patch_applied
 
 all: .checkout_source .patch_applied
 	@echo Building bootloader ...
+	@cp -f conf/tinyaprs.conf.mk .xboot/conf
 	make -C .xboot conf/tinyaprs.conf.mk
 	@mkdir -p bin;cp -f .xboot/xboot.hex bin
 
+flash:
+	avrdude -p atmega328p -c usbasp -P usb -F -U flash:w:bin/xboot.hex:i -U hfuse:w:0xD8:m
 
 clean:
+	@[ -d .xboot ] && { make -C .xboot clean; } || :
+
+distclean:
 	rm -fr .xboot
 	rm -f .checkout_source .patch_applied
